change in text unfitted models

--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -1608,9 +1608,8 @@ summarize_ds_models2(out_models) %>%
 
 De volgende hazard-rate modellen konden niet gefit worden (Hessian = `NA`):
 
--   \~sbp\*openheid
 -   \~regio + sbp
--   \~regio\*sbp
+-   \~openheid
 -   \~regio + sbp + openheid
 -   \~regio + openheid
 
