implement new shape file akkervogelgebieden

--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -192,7 +192,7 @@ list(
   ),
   tarchetypes::tar_file(
     sbp_akkervogels_file,
-    path_to_sbp_akkervogels()
+    path_to_sbp_akkervogels(file = "akkervogelgebieden2022.shp")
   )
 )
 ```
