add target to add cumulative visibility

--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -100,7 +100,9 @@ tar_option_set(packages = c("dplyr",
                             "exactextractr",
                             "arrow",
                             "httr",
-                            "sf"),
+                            "sf",
+                            "inbospatial",
+                            "GVI"),
                format = "qs",
                memory = "transient",
                garbage_collection = TRUE,
@@ -338,6 +340,12 @@ list(
       class_labels = c("GL", "HGL", "HOL", "OL")),
     pattern = map(perimeters_data, plus_sb)
   ),
+  tar_target(
+    name = plus_visibility,
+    command = add_visibility_to_frame(
+      ),
+    pattern = map(perimeters_data, plus_sb)
+  ),
   tar_target(name = sbp_akkervogels,
              command = read_sbp_akkervogels(
                path = sbp_akkervogels_file,
@@ -346,9 +354,9 @@ list(
              pattern = map(perimeters_data)),
   tar_target(
     name = steekproefkader_finaal,
-    command = add_stratum_sbp(punten_sf = plus_openheid_landschap,
+    command = add_stratum_sbp(punten_sf = plus_visibility,
                               sbp = sbp_akkervogels),
-    pattern = map(sbp_akkervogels, plus_openheid_landschap)
+    pattern = map(sbp_akkervogels, plus_visibility)
   )
 )
 ```
