--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -342,7 +342,11 @@ list(
   tar_target(
     name = plus_visibility,
     command = add_visibility_to_frame(
-      punten_sf = plus_openheid_landschap),
+      punten_sf = plus_openheid_landschap,
+      gebied = perimeters_data,
+      name = "leefdaal",
+      resolution = 5,
+      spacing = 10),
     pattern = map(perimeters_data, plus_openheid_landschap)
   ),
   tar_target(name = sbp_akkervogels,
